@startuml
skinparam monochrome true
skinparam shadowing false
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam nodesep 70
skinparam ranksep 90
left to right direction

title BayesPipeline Architecture

package "Messaging Layer" {
  class MessageSimulator
  class TestMessageProcessor1
  class TestMessageProcessor2
}

package "BayesPipeline" {
  interface IFeaturePublisher {
    + PublishFeature(data: FeatureData)
  }

  class BayesRuntimeConfig {
    + output_file: filesystem::path
    + max_records: size_t
    + time_tolerance_ns: int64_t
    + evaluation_policy: EvaluationPolicy
    + partial_policy: PartialPolicy
    + partial_grace_window_ns: int64_t
  }

  class LoadBayesRuntimeConfig {
    + operator()(file_path: filesystem::path): BayesRuntimeConfig
  }

  class BayesRuntimeManager {
    + BayesRuntimeManager(runtime_config_path: path, model_config_path: path)
    + BayesRuntimeManager(model_config_path: path, output_file: path, ...)
    + Start()
    + Stop()
    + PublishFeature(data: FeatureData)
    + GetLatestResults()
    + GetOutputFile()
    - Run()
  }

  class IngestQueue {
    + Push(event: FeatureData)
    + Pop(out event: FeatureData)
    + Close()
  }

  class BayesClassifierManager {
    + ClassifyIfReady()
    + GetLatestResults()
    - RecordFeatureSample(data: FeatureData)
    - Classify()
  }

  class FeatureAlignmentStore {
    + RecordFeatureSample(data: FeatureData)
    + BuildJoinedFeatureVectors(allow_partial: bool)
    + ShouldClassify(trigger: ClassificationTrigger)
    + ResetUpdatedFeatures()
    + PrimaryFeatureName()
  }

  class FeatureData {
    + id: int
    + time: int64_t
    + feature_name: string
    + value: double
    + truth_label: optional<string>
  }

  class JoinedFeatureVector {
    + id: int
    + anchor_time: int64_t
    + feature_values: map<string,double>
    + truth_label: optional<string>
    + is_partial: bool
  }

  class ClassificationResult {
    + id: int
    + time: int64_t
    + truth_label: optional<string>
    + classification_state: string
    + feature_inputs: vector<pair<string,double>>
    + predicted_class: string
    + predicted_prob: double
    + posteriors: vector<pair<string,double>>
    + predicted_group: string
    + predicted_group_prob: double
    + group_posteriors: vector<pair<string,double>>
    + is_partial: bool
  }
}

package "BayesClassifier" {
  class NaiveBayes
  class FeatureDistribution {
    + Sample(rng)
  }
  class PipelineHelpers {
    + RunDetailedPrediction(...)
    + BuildFeatureInputs(...)
  }
  class WritePredictionsCsv
}

MessageSimulator --> NaiveBayes : ClassModels() / SampleFeatureForClass(...)
TestMessageProcessor1 --> IFeaturePublisher : publish feature
TestMessageProcessor2 --> IFeaturePublisher : publish feature

BayesRuntimeManager ..|> IFeaturePublisher
BayesRuntimeManager --> LoadBayesRuntimeConfig : load config
BayesRuntimeManager --> BayesRuntimeConfig : use settings
BayesRuntimeManager --> IngestQueue : enqueue/dequeue
BayesRuntimeManager --> BayesClassifierManager : classify
BayesRuntimeManager --> WritePredictionsCsv : write CSV

BayesClassifierManager --> FeatureAlignmentStore : align features
BayesClassifierManager --> PipelineHelpers : build prediction payload
PipelineHelpers --> NaiveBayes : infer probabilities
NaiveBayes --> FeatureDistribution : sample per feature
BayesClassifierManager --> ClassificationResult : emit results

FeatureAlignmentStore --> FeatureData
FeatureAlignmentStore --> JoinedFeatureVector

note right of BayesRuntimeManager
Single worker thread drains IngestQueue.
Each FeatureData event may trigger ClassifyIfReady().
Model config path is provided explicitly at construction.
end note

note right of MessageSimulator
Model-driven synthetic mode samples feature values
through BayesClassifier distributions.
end note

note right of BayesClassifierManager
Feature order for model input comes from
NaiveBayes::FeatureNames().
end note

@enduml
